# basic-programs

./: .gitmodules  CMakeLists.txt  README.md  common.h  program.cpp
bin2array/: CMakeLists.txt  program.cpp
disasop/: CMakeLists.txt  program.cpp
entropy/: CMakeLists.txt  entry.cpp
hexdump/: CMakeLists.txt  program.cpp
today/: CMakeLists.txt  program.cpp
